fix: notifier content alignment to left

--- a/app/component/itinerary/navigator/navigator.scss
+++ b/app/component/itinerary/navigator/navigator.scss
@@ -441,6 +441,7 @@ $fixed-width-padding: 16px;
       color: #fff;
       border-radius: 999px; // var(--radius-radius-medium, 8px);
       margin-top: var(--space-xxs);
+      width: 220px;
 
       /* box-shadow-card-s-strong */
       box-shadow: 0 2px 4px 0 var(--color-shadow-strong, rgba(51, 51, 51, 0.2));
